# ai-slopcheck

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  code_review.md  pyproject.toml
.agent/: PLANS.md
.claude-octopus/: state.json
ai_slopcheck/: __init__.py  __main__.py  cli.py
docs/: agent-handoff.md  architecture.md  cli-reference.md  configuration-guide.md  github-integration.md  implementation-roadmap.md  rule-authoring.md  rule-catalog.md  security-model.md  state-and-baselines.md  user-guide.md
prompts/: claude-first-prompt.md  codex-first-prompt.md
slopcheck/: __init__.py  __init__.py:Zone.Identifier  __main__.py  cli.py  config.py  models.py
tests/: test_ai_conversational_bleed.py  test_ai_hardcoded_mocks.py  test_ai_identity_refusal.py  test_ai_instruction_comment.py  test_api_contract_breaking.py  test_api_routes.py  test_assignment_in_conditional.py  test_bare_except_pass.py  test_bare_except_pass_go.py  test_bare_except_pass_js.py  test_break_in_nested_loop.py  test_cli.py  test_collection_modify_while_iterating.py  test_config.py  test_console_log.py  test_contradictory_null_check.py  test_cross_language_idiom.py  test_dangerous_shell_in_markdown.py  test_dead_code_comment.py  test_debug_code_left.py  test_deep_inheritance.py  test_deep_nesting.py  test_division_by_zero_risk.py  test_early_return_opportunity.py  test_forbidden_import_edges.py  test_global_state_leak.py  test_go_error_wrap.py  test_go_ignored_error.py  test_go_missing_defer.py  test_goto_usage.py  test_hallucinated_placeholder.py  (+48 more)
(+163 files in other folders)
